// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostCard Snapshot > renders with complete post data correctly 1`] = `
"<article class="py-16 grid grid-cols-1 gap-6 lg:grid-cols-12">
  <div class="lg:col-span-8"><a href="/posts/undefined/"><img alt="Test Title" data-nuxt-img="" srcset="https://example.com/image.jpg 1x, https://example.com/image.jpg 2x" class="mb-6 h-64 w-full object-cover" src="https://example.com/image.jpg"><!-- Title -->
      <h2 class="mb-4 text-4xl font-extrabold hover:underline">Test Title</h2>
    </a>
    <p class="mb-4 text-xl"><span>This is a test excerpt for the post.</span></p>
    <div class="mb-4"><span class="mr-1 text-sm font-medium">SEP 30 2022</span><span>–</span><span class="ml-1 text-sm font-medium">JOHN DOE</span></div>
    <div class="flex flex-wrap gap-2 mt-4"><a href="/posts/category/tech/" class="rounded-full border border-blue-300 bg-blue-50 px-3 py-1 text-sm font-medium text-blue-600 hover:bg-blue-100 dark:border-blue-700 dark:bg-blue-900/30 dark:text-blue-300 dark:hover:bg-blue-800/50">Tech</a></div>
  </div>
  <div class="lg:col-span-3 lg:col-start-8">
    <!-- Right column (30%) -->
  </div>
</article>"
`;

exports[`PostCard Snapshot > renders with custom title prop overriding display title correctly 1`] = `
"<article class="py-16 grid grid-cols-1 gap-6 lg:grid-cols-12">
  <div class="lg:col-span-8"><a href="/posts/undefined/"><img alt="Custom Title" data-nuxt-img="" srcset="https://example.com/image2.jpg 1x, https://example.com/image2.jpg 2x" class="mb-6 h-64 w-full object-cover" src="https://example.com/image2.jpg"><!-- Title -->
      <h2 class="mb-4 text-4xl font-extrabold hover:underline">Custom Title</h2>
    </a>
    <p class="mb-4 text-xl"><span>Post with custom title prop.</span></p>
    <div class="mb-4"><span class="mr-1 text-sm font-medium">FEB 28 2023</span><span>–</span><span class="ml-1 text-sm font-medium">JANE DOE</span></div>
    <div class="flex flex-wrap gap-2 mt-4"><a href="/posts/category/news/" class="rounded-full border border-blue-300 bg-blue-50 px-3 py-1 text-sm font-medium text-blue-600 hover:bg-blue-100 dark:border-blue-700 dark:bg-blue-900/30 dark:text-blue-300 dark:hover:bg-blue-800/50">News</a></div>
  </div>
  <div class="lg:col-span-3 lg:col-start-8">
    <!-- Right column (30%) -->
  </div>
</article>"
`;

exports[`PostCard Snapshot > renders without featured image and author correctly 1`] = `
"<article class="py-16 grid grid-cols-1 gap-6 lg:grid-cols-12">
  <div class="lg:col-span-8"><a href="/posts/undefined/">
      <!--v-if-->
      <!-- Title -->
      <h2 class="mb-4 text-4xl font-extrabold hover:underline">No Image Post</h2>
    </a>
    <p class="mb-4 text-xl"><span>Post without featured image and author info.</span></p>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="lg:col-span-3 lg:col-start-8">
    <!-- Right column (30%) -->
  </div>
</article>"
`;
